Fixed overflow scroll bug.

--- a/frontend/src/public/css/loggedin/uprofile.css
+++ b/frontend/src/public/css/loggedin/uprofile.css
@@ -43,12 +43,12 @@
 
 
 .u-profile-contents {
-    margin-top: 60px;
-    width: 60%;
+    margin-top: 30px;
+    overflow-y: scroll;
+    width: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     background-color: black;
     color: white;
 }
@@ -134,7 +134,7 @@
     align-items: flex-start;
 }
 
-.profile-marts-box h3 {
+.profile-marts-box h4 {
     font-weight: 400;
     margin: 0;
     width: 100%;
@@ -145,7 +145,6 @@
     padding-left: 10px;
     padding-right: 10px;
     font-weight: 400;
-    font-size: 1.3rem;
     border-left: solid 2px white;
     margin-top: 0;
 
